Fixes #619 - Corrected URL decoding to use WarpURLDecoder